--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1876,8 +1876,8 @@
    ],
    "source": [
     "#si-oddsOrEvens\n",
-    "number_list = [(-i if i % 2 != 0 else i) for i in range(1, 51)]\n",
-    "print(number_list)"
+    "oddsOrEvens = [(-i if i % 2 != 0 else i) for i in range(1, 51)]\n",
+    "print(oddsOrEvens)"
    ]
   },
   {
