--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d12e9b05",
    "metadata": {},
    "outputs": [
@@ -1876,7 +1876,12 @@
    ],
    "source": [
     "#si-oddsOrEvens\n",
-    "oddsOrEvens = [(-i if i % 2 != 0 else i) for i in range(1, 51)]\n",
+    "oddsOrEvens=[]\n",
+    "for i in range(1, 50):\n",
+    "    if (i % 2 != 0):\n",
+    "        oddsOrEvens.append(-i)\n",
+    "    else:\n",
+    "        oddsOrEvens.append(i)\n",
     "print(oddsOrEvens)"
    ]
   },
